# benchmark

./: BENCHMARK_README.md  README.md  benchmark_results.json  benchmark_specs.md  ml_ai_benchmark.py  pyproject.toml  visualize.py
output/: AndersonMonteiroM4Pro.local.json  G3-3590.json
